Fixing safari bug, and cut off of replies

--- a/public/css/channels.css
+++ b/public/css/channels.css
@@ -51,7 +51,7 @@
   border-bottom: 1px solid rgb(255, 255, 255);
   color: rgb(72, 123, 255);
   font-size: 14px;
-  line-height: 30px;
+  line-height: 26px;
 }
 
 #channels .manage-channels {
